kubernetes/k3s-prod-a/nextcloud/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: docker.io/library/nextcloud:30.0.0@sha256:c293951861b5036eb8ec48a14584348fc6699e2e718d785ae8f7551f3befe5d2
          ports:
            - name: web
              containerPort: 80
          # startupProbe: # returns a 400 to kube-probe
          #   httpGet:
          #     path: /status.php
          #     port: 80
          #   failureThreshold: 5
          #   periodSeconds: 20
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
