kubernetes/k3s-prod-a/nextcloud/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.l.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: nextcloud
          name: headers
      services:
        - name: nextcloud
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: nextcloud-certificate
